RESOLVED FIXED151069
Don't call Vector::uncheckedAppend on a vector that we haven't reserved the capacity for
https://bugs.webkit.org/show_bug.cgi?id=151069
Summary Don't call Vector::uncheckedAppend on a vector that we haven't reserved the c...
Anders Carlsson
Reported 2015-11-09 17:08:40 PST
Don't call Vector::uncheckedAppend on a vector that we haven't reserved the capacity for
Attachments
Patch (1.46 KB, patch)
2015-11-09 17:09 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-11-09 17:09:03 PST
Anders Carlsson
Comment 2 2015-11-09 17:11:25 PST
Note You need to log in before you can comment on or make changes to this bug.