Don't call Vector::uncheckedAppend on a vector that we haven't reserved the capacity for https://bugs.webkit.org/show_bug.cgi?id=151069 rdar://problem/23473435

Reviewed by Tim Horton.

* Shared/API/Cocoa/_WKRemoteObjectInterface.mm:
(initializeMethod):

Canonical link: https://commits.webkit.org/169272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192195 268f45cc-cd09-0410-ab3c-d52691b4dbfc